{
    "name": "VR Action",
    "maps": [
        {
            "name": "hand",
            "id": "8496f290-1373-49c6-a573-e97dc37b1303",
            "actions": [
                {
                    "name": "gripLeft",
                    "type": "PassThrough",
                    "id": "558cd3df-d054-4a02-9bf1-120d4c540ed2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "gripRight",
                    "type": "PassThrough",
                    "id": "45a6471d-ef5f-4d11-a933-c1eeb9f145de",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "veloLeft",
                    "type": "Value",
                    "id": "d58c432c-e481-4a7c-9661-6c377cedfea7",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "veloRight",
                    "type": "Value",
                    "id": "239824ad-c170-4ec6-bd3a-a665f682e340",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TrigLeft",
                    "type": "PassThrough",
                    "id": "5ef35065-1233-4c49-aca2-93ca75d2734a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TrigRight",
                    "type": "PassThrough",
                    "id": "12ae077c-c16a-4c51-9cab-4743296087f9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PreTrigLeft",
                    "type": "PassThrough",
                    "id": "acb0cbe7-3409-456c-998f-b80c60bf076e",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PreTrigRight",
                    "type": "PassThrough",
                    "id": "92649db5-fb60-4864-be07-b2ba4717c86c",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "81bfeefe-e94e-413c-9603-e086d1fc2232",
                    "path": "<XRController>{LeftHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "gripLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb830516-6cd7-41ad-b5d4-7c928e2e12b0",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "gripLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "faaa7c6c-44bb-4ccf-9300-dcc497d83a7b",
                    "path": "<OculusTouchController>{RightHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "gripRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0b3fe475-6321-415f-9a00-10cb6f0fb51f",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "gripRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2d0101d7-cdb9-4338-bd06-e367c9f4aaf0",
                    "path": "<OculusTouchController>{LeftHand}/deviceVelocity",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "veloLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e0748adc-7843-4eaa-9313-f8c89450160a",
                    "path": "<OculusTouchController>{RightHand}/deviceVelocity",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "veloRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d24c56dc-4b49-40fa-8886-918d903e2515",
                    "path": "<XRController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TrigLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "44ad67bf-0e17-4565-807e-9510d37e1f2e",
                    "path": "<XRController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TrigRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "468a595a-b058-49f7-92ad-7b19428271d6",
                    "path": "<OculusTouchController>{LeftHand}/triggerTouched",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PreTrigLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "88028d8d-42ed-425e-ab7d-e9d9d0652efc",
                    "path": "<OculusTouchController>{RightHand}/triggerTouched",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PreTrigRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}